--- a/main.html
+++ b/main.html
@@ -8,10 +8,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300&display=swap" rel="stylesheet">
-
-    <script
-    src="https://kit.fontawesome.com/61d7427009.js" crossorigin="anonymous">
-    </script>
   </head>
 
   <body>
@@ -24,12 +20,14 @@
               <li><a href="main.html">Home</a></li>
               <li><a href="#">Chart</a></li>
               <li><a href="#">My list</a></li>
-              <li><a href="#">Question-Board</a></li>
+              <li><a href="#">Free-Board</a></li>
         </ul>
 
         <ul class="Header_icons">
               <li><a href="https://www.instagram.com/noon_noo_nan_na/" target='_blank'>
               <i class="fab fa-instagram">Insta</i></a></li>
+              <li id="login_icons"><a href=""><i class="fas fa-sign-in-alt"></i></a></li>
+              <li class="hidden" id="user_icons"><a href=""><i class="fas fa-user"></i></a></li>
         </ul>
 
         <a href="#" class="Header_toggleBtn"><i class="fas fa-bars"></i></a>
@@ -68,5 +66,8 @@
     </div>
 
 
+    <script
+    src="https://kit.fontawesome.com/61d7427009.js" crossorigin="anonymous">
+    </script>
   </body>
 </html>
